2006-03-13  Eric Botcazou  <ebotcazou@adacore.com>

	PR middle-end/18859
	* stmt.c (expand_case): Discard empty ranges.

2006-03-10  Jason Merrill  <jason@redhat.com>

	PR c/26004
	* gimplify.c (gimplify_modify_expr_rhs): Don't do return slot opt if 
	the target was declared 'register'.

2006-03-09  Roger Sayle  <roger@eyesopen.com>

	PR tree-optimization/26524
	* tree-scalar-evolution.c (interpret_rhs_modify_expr): Use
	fold_convert to create a constant of the appropriate type.

2006-03-07  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/26587
	* tree-ssa-structalias.c (handle_ptr_arith): Handle MINUS_EXPR.

2006-03-03  Steve Ellcey  <sje@cup.hp.com>

	PR rtl-optimization/26345
	PR target/19061
	* config/ia64/predicates.md (basereg_operand): Don't look in subregs.

2006-03-02  Alan Modra  <amodra@bigpond.net.au>

	PR target/26453
	* config/rs6000/rs6000.c (rs6000_output_function_epilogue): Don't
	output traceback table for thunks.  Localise rs6000_stack_info call.

2006-02-28  David Edelsohn  <edelsohn@gnu.org>

	* doc/install.texi: Require GNU tar version 1.14.

2006-02-28  Mark Mitchell  <mark@codesourcery.com>

	* BASE-VER: 4.1.1.
	* DEV-PHASE: Prerelease.

2006-02-28  Release Manager

	* GCC 4.1.0 released.

2006-02-23  Mark Mitchell  <mark@codesourcery.com>

	Backport:
	2006-02-20  Roger Sayle  <roger@eyesopen.com>
	* gthr-posix.h: On Tru64, map __gthr_foo as a weak reference to
	__foo and not foo when _PTHREAD_USE_MANGLED_NAMES_ is defined.

2006-02-23  Mark Mitchell  <mark@codesourcery.com>

	Backport:
	2006-02-21  Jakub Jelinek  <jakub@redhat.com>
	PR middle-end/26379
	* combine.c (simplify_shift_const_1): Disable nested shifts
	optimization for vector shifts.

2006-02-23  Mark Mitchell  <mark@codesourcery.com>

	Backport:
	2006-02-16  Denis Nagorny <denis_nagorny@linux.intel.com>
	PR rtl-optimization/25603
	* reload.c (reg_inc_found_and_valid_p): New. Check REG_INC note.
	(regno_clobbered_p): Use it. Reusing SETS argument for REG_INC case.