@@ -111,10 +111,10 @@ ___udivsi3:
 .type ___umodsi3, STT_FUNC;
 
 ___umodsi3:
-        P1 = RETS;
-        CALL ___udivsi3;
+	[--SP] = RETS;
+	CALL ___udivsi3;
 	R0 = R3;
-	RETS = P1; 
-        RTS;
+	RETS = [SP++]; 
+	RTS;
 #endif
 
